[package]
name = "markupsafe-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust port of Python's markupsafe: HTML escaping with a type-safe Markup string."
license = "BSD-3-Clause"
repository = "https://github.com/VoiceLessQ/markupsafe-rs"
readme = "README.md"
keywords = ["html", "escape", "markup", "xss", "templating"]
categories = ["template-engine", "web-programming"]

[dependencies]
